@@ -17,6 +17,7 @@ Bug fixes for the 1.4 release.
 * Fix Lua error message saying "number expected" instead of "string expected".
 * Fix game:set_command_keyboard/joypad_binding refusing parameters.
 * Fix map scrolling not working if quest size is not a multiple of 5 (#701).
+* Fix camera:move() ignoring separators.
 * Fix entities already destroyed when map:on_finished() is called (#691).
 * Fix entity:bring_to_front()/back() ignoring the order of obstacles.
 * Fix hero stuck on blocks.
